Changed Links and media files

--- a/index.html
+++ b/index.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JR5MEXBRN1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JR5MEXBRN1');
-</script>
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./fonts.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Profile card || thedjzihan</title>
+    <title>Profile card || Rizvi</title>
 </head>
 <body>
    <div id="preloader"></div>
 <div class="card-container">
 <div class="card-up">
 <ul>
-   <li><a href="https://github.com/thedjzihan/" target="_blank"><i class="fa icon-github"></i></a></li>
+   <li><a href="https://github.com/rizvi22/" target="_blank"><i class="fa icon-github"></i></a></li>
    <li><a href="https://discord.gg/9sTCUv4sY5/" target="_blank"><i class="fa icon-discord"></i></a></li>
-   <li><a href="https://instagram.com/thedjzihan/" target="_blank"><i class="fa icon-instagram"></i></a></li>
-   <li><a href="https://reddit.com/user/thedjzihan/" target="_blank"><i class="fa icon-reddit"></i></a></li>
+   <li><a href="https://instagram.com/mahmud_rizvi_7/" target="_blank"><i class="fa icon-instagram"></i></a></li>
+   <li><a href="#" target="_blank"><i class="fa icon-reddit"></i></a></li>
 </ul>
 <div class="card-add"><i class="fa fa-plus"></i></div>
 </div>
 <div class="card-down">
-   <h1>thedjzihan</h1>
-   <h3 class="text">16, HE/HIM, SINGLE αɳԃ BADASS</h3>
+   <h1>Mahmud Rizvi</h1>
+   <h3 class="text">17, HE/HIM, SINGLE αɳԃ BADASS</h3>
    <h2>About</h2>
-   <p class="text-description">Just a 16 yrs old high-school kid who's hobby is wasting time. Thou life is usual and nothing special, it feels boring sometimes but I enjoy my life as it is now. Music is my life. I like watching ANIME, Hollywood movies and K-dramas. And I avoid things that others are much better than me.<br> 
-     As I am a MAN OF CULTURE you can find me almost everywhere with @thedjzihan.</p>
+   <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, itaque tempora beatae, impedit sequi illo eaque adipisci officia, odio laborum cupiditate perferendis.
+      Vero deserunt iusto sapiente porro nemo atque aliquid?</p>
    <div class="text-btn">
    <h3 class="btn-text">Read More</h3>
 </div>
 </div>
 <div class="card-back">
    <p>See my latest works here</p>
-   <a href="https://facebook.com/thedjzihanx/" target="_blank"><i class="fa icon-facebook fa-2x fa-fw"></i></a>
-   <a href="https://sptfy.com/thedjzihan/" target="_blank"><i class="fa icon-spotify fa-2x fa-fw"></i></a>
-   <a href="https://steamcommunity.com/id/thedjzihan/" target="_blank"><i class="fa icon-steam fa-2x fa-fw"></i></a>
-   <a href="https://trakt.tv/users/thedjzihan/" target="_blank"><i class="fa icon-trakt fa-2x fa-fw"></i></a>
-   <a href="https://myanimelist.net/profile/thedjzihan/" target="_blank"><i class="fa icon-myanimelist fa-2x fa-fw"></i></a>
-   <a href="https://anilist.co/user/thedjzihan/" target="_blank"><i class="fa icon-anilist fa-2x fa-fw"></i></a>
+   <a href="https://facebook.com/mahmud.rizvi.3/" target="_blank"><i class="fa icon-facebook fa-2x fa-fw"></i></a>
+   <a href="#" target="_blank"><i class="fa icon-spotify fa-2x fa-fw"></i></a>
+   <a href="#" target="_blank"><i class="fa icon-steam fa-2x fa-fw"></i></a>
+   <a href="#" target="_blank"><i class="fa icon-trakt fa-2x fa-fw"></i></a>
+   <a href="#" target="_blank"><i class="fa icon-myanimelist fa-2x fa-fw"></i></a>
+   <a href="#" target="_blank"><i class="fa icon-anilist fa-2x fa-fw"></i></a>
    <p>Follow Me!</p>
 </div>
 </div>
