Modified social links and media files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <li><a href="https://github.com/rizvi22/" target="_blank"><i class="fa icon-github"></i></a></li>
    <li><a href="https://discord.gg/9sTCUv4sY5/" target="_blank"><i class="fa icon-discord"></i></a></li>
    <li><a href="https://instagram.com/mahmud_rizvi_7/" target="_blank"><i class="fa icon-instagram"></i></a></li>
-   <li><a href="#" target="_blank"><i class="fa icon-reddit"></i></a></li>
+   <li><a href="https://twitter.com/mahmud_rizvi_07" target="_blank"><i class="fa fa-twitter"></i></a></li>
 </ul>
 <div class="card-add"><i class="fa fa-plus"></i></div>
 </div>
@@ -26,7 +26,7 @@
    <h3 class="text">17, HE/HIM, SINGLE αɳԃ BADASS</h3>
    <h2>About</h2>
    <p class="text-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, itaque tempora beatae, impedit sequi illo eaque adipisci officia, odio laborum cupiditate perferendis.
-      Vero deserunt iusto sapiente porro nemo atque aliquid?</p>
+     <br> Vero deserunt iusto sapiente porro nemo atque aliquid?</p>
    <div class="text-btn">
    <h3 class="btn-text">Read More</h3>
 </div>
