Changed social links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <div class="card-container">
 <div class="card-up">
 <ul>
-   <li><a href="https://github.com/rizvi22/" target="_blank"><i class="fa icon-github"></i></a></li>
-   <li><a href="https://discord.gg/9sTCUv4sY5/" target="_blank"><i class="fa icon-discord"></i></a></li>
-   <li><a href="https://instagram.com/mahmud_rizvi_7/" target="_blank"><i class="fa icon-instagram"></i></a></li>
+   <li><a href="https://github.com/rizvi22/" target="_blank"><i class="fa fa-github"></i></a></li>
+   <li><a href="https://sptfy.com/rizvi07/" target="_blank"><i class="fa fa-spotify"></i></a></li>
+   <li><a href="https://instagram.com/mahmud_rizvi_7/" target="_blank"><i class="fa fa-instagram"></i></a></li>
    <li><a href="https://twitter.com/mahmud_rizvi_07" target="_blank"><i class="fa fa-twitter"></i></a></li>
 </ul>
 <div class="card-add"><i class="fa fa-plus"></i></div>
@@ -34,7 +34,7 @@
 <div class="card-back">
    <p>See my latest works here</p>
    <a href="https://facebook.com/mahmud.rizvi.3/" target="_blank"><i class="fa icon-facebook fa-2x fa-fw"></i></a>
-   <a href="#" target="_blank"><i class="fa icon-spotify fa-2x fa-fw"></i></a>
+   <a href="https://discord.gg/9sTCUv4sY5/" target="_blank"><i class="fa icon-discord fa-2x fa-fw"></i></a>
    <a href="#" target="_blank"><i class="fa icon-steam fa-2x fa-fw"></i></a>
    <a href="#" target="_blank"><i class="fa icon-trakt fa-2x fa-fw"></i></a>
    <a href="#" target="_blank"><i class="fa icon-myanimelist fa-2x fa-fw"></i></a>
